--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@babel/plugin-transform-arrow-functions": "^7.18.6",
     "@babel/plugin-transform-block-scoping": "^7.18.9",
     "@babel/plugin-transform-strict-mode": "^7.18.6",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.24.1",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
