--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
+    "connect-api-mocker": "^1.10.0",
     "core-js": "^3.24.1",
     "css-loader": "^6.7.1",
     "eslint": "^8.22.0",
@@ -40,6 +41,7 @@
     "*.js": "eslint --cache --fix"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "webpack-dev-server": "^4.11.1"
   }
 }
